# desktop-ai-agent

./: README.md
.github/workflows/: release.yml  test.yml
docs/: AUTO_RELEASE.md  api-config.md  architecture.md  build-guide.md  progress.md
scripts/: auto_release.sh
skills/excel-analysis/: SKILL.md
skills/excel-analysis/scripts/: analyze.py  pivot.py  plot.py
skills/excel-processor/: SKILL.md
skills/excel-processor/scripts/: csv_to_excel.py  merge_excel.py  read_excel.py  write_excel.py
skills/folder-organizer/: SKILL.md
skills/folder-organizer/scripts/: batch_rename.py  find_duplicates.py  organize_by_date.py  organize_by_type.py
skills/pdf-processor/: SKILL.md
skills/pdf-processor/scripts/: extract_text.py  merge_pdf.py  rotate_pdf.py  split_pdf.py
skills/ppt-generator/: SKILL.md
skills/ppt-generator/scripts/: generate_ppt.py
skills/python-script-generator/: SKILL.md
skills/rust-project-generator/: SKILL.md
skills/video-generator/: SKILL.md
skills/video-generator/scripts/: image_to_video.sh  text_to_video.sh
skills/web-api-client/: SKILL.md
skills/web-scrape/: SKILL.md
src-agent/: Cargo.toml
src-agent/src/: lib.rs
src-agent/src/agent/: executor.rs  mod.rs  multi_agent.rs  task.rs
src-agent/src/config/: mod.rs
src-agent/src/ipc/: handlers.rs
src-agent/src/mcp/: client.rs  mod.rs
src-agent/src/providers/: claude.rs  dashscope.rs  mod.rs  ollama.rs  openai.rs  provider_trait.rs  trait.rs
src-agent/src/scheduler/: mod.rs  scheduler.rs
src-agent/src/skills/: manager.rs  mod.rs
src-agent/src/tools/: audio.rs  browser.rs  fileops.rs  image.rs  mod.rs  pdf.rs  registry.rs  shell.rs  tests.rs  tool_trait.rs  trait.rs  video.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: index.html  package-lock.json  package.json
src-ui/src/: App.tsx  index.css
src-ui/src/pages/: ChatPage.tsx  HistoryPage.tsx  (+2 more)
(+2 files in other folders)
