[package]
name = "qoderwork-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for LLM API)
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"  # 获取用户目录
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Tauri integration (optional)
tauri = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "qoderwork_agent"
path = "src/lib.rs"

[features]
default = []
tauri = ["dep:tauri"]

# Binary for standalone testing
[[bin]]
name = "agent-cli"
path = "src/bin/cli.rs"