[package]
name = "qoderwork-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
urlencoding = "2"
thirtyfour = { version = "0.31", default-features = false }
scraper = "0.22"
lazy_static = "1.4"
once_cell = "1.18"
pulldown-cmark = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tauri = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "qoderwork_agent"
path = "src/lib.rs"

[features]
default = []
tauri = ["dep:tauri"]

[[bin]]
name = "agent-cli"
path = "src/bin/cli.rs"
